syntax = "proto3";

option csharp_namespace = "GrpcServer";

package user;

service UserActivity {

  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);

}


message SignInRequest {
  string userName = 1;
  string password = 2;
}


message SignInResponse {
  int32 statusCode = 1;
  string message = 2;
}

message SignUpRequest {
	  string email = 1;
  string userName = 2;
  string password =3;
}


message SignUpResponse {
  int32 statusCode = 1;
  string message = 2;
}
